--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ footer_text: >
  
 keywords: academic-website, Shaghayegh, Shajarian, shaghayegh-shajarian, shirley-shajarian 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 💻 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://shajarian.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -111,7 +111,7 @@ scholar_userid: g1ckndEAAAAJ # your Google Scholar ID
 # zotero_username: # your zotero username
 
 contact_note: >
-
+The best way to contact me is sending me an email to ssha reach me via email.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
